--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,13 @@ hr {
 	margin-top: 25px;
 	margin-bottom: 35px;
 }
+a:hover {
+	color: #eee;
+	box-shadow: 3px 2px 2px #555
+}
+a:focus {
+	color: #eee;
+}
 .buttons {
 	position: relative;
 	text-align: center;
@@ -142,6 +149,75 @@ hr {
 	margin-top: 10vh;
 	width: 190px;
 }
+.arrow {
+	position: absolute;
+	color: #fff;
+	width: 35px;
+	height: 35px;
+	margin-left: -17px;
+	left: 50%;
+	bottom: 6%;
+	border: solid;
+	border-width: 0 5px 5px 0;
+	border-radius: 6px 4px;
+	-ms-transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+		@-moz-keyframes bounce {
+		  0%, 20%, 50%, 80%, 100% {
+		    -moz-transform: translateY(0);
+		    transform: translateY(0);
+		  }
+		  40% {
+		    -moz-transform: translateY(-20px);
+		    transform: translateY(-20px);
+		  }
+		  60% {
+		    -moz-transform: translateY(-10px);
+		    transform: translateY(-10px);
+		  }
+		}
+		@-webkit-keyframes bounce {
+		  0%, 20%, 50%, 80%, 100% {
+		    -webkit-transform: translateY(0) rotate(45deg);
+		    transform: translateY(0) rotate(45deg);
+		  }
+		  40% {
+		    -webkit-transform: translateY(-20px) rotate(45deg);
+		    transform: translateY(-20px) rotate(45deg);
+		  }
+		  60% {
+		    -webkit-transform: translateY(-10px) rotate(45deg);
+		    transform: translateY(-10px) rotate(45deg);
+		  }
+		}
+		@keyframes bounce {
+		  0%, 20%, 50%, 80%, 100% {
+		    -moz-transform: translateY(0) rotate(45deg);
+		    -ms-transform: translateY(0) rotate(45deg);
+		    -webkit-transform: translateY(0) rotate(45deg);
+		    transform: translateY(0) rotate(45deg);
+		  }
+		  40% {
+		    -moz-transform: translateY(-20px) rotate(45deg);
+		    -ms-transform: translateY(-20px) rotate(45deg);
+		    -webkit-transform: translateY(-20px) rotate(45deg);
+		    transform: translateY(-20px) rotate(45deg);
+		  }
+		  60% {
+		    -moz-transform: translateY(-10px) rotate(45deg);
+		    -ms-transform: translateY(-10px) rotate(45deg);
+		    -webkit-transform: translateY(-10px) rotate(45deg);
+		    transform: translateY(-10px) rotate(45deg);
+		  }
+		}
+
 
 
 /* ==========================================================================
